// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCache delete should correctly delete a connection 1`] = `
Array [
  Object {
    "EphemeraId": "VARIABLE#testOne",
    "completeness": "Complete",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testTwo",
        "assets": Array [
          "base",
        ],
      },
      Object {
        "EphemeraId": "COMPUTED#testThree",
        "assets": Array [
          "base",
        ],
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "completeness": "Partial",
    "connections": Array [],
  },
  Object {
    "EphemeraId": "COMPUTED#testThree",
    "completeness": "Partial",
    "connections": Array [],
  },
]
`;

exports[`GraphCache delete should decrement connection assets when redundancies exist 1`] = `
Array [
  Object {
    "EphemeraId": "VARIABLE#testOne",
    "completeness": "Partial",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testTwo",
        "assets": Array [
          "base",
        ],
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "completeness": "Partial",
    "connections": Array [],
  },
]
`;

exports[`GraphCache generationOrder should correctly calculate generation order for a complex graph 1`] = `
Array [
  Array [
    "VARIABLE#One",
  ],
  Array [
    "COMPUTED#Two",
    "COMPUTED#Six",
  ],
  Array [
    "COMPUTED#Four",
  ],
  Array [
    "COMPUTED#Seven",
  ],
]
`;

exports[`GraphCache get should correctly fetch a tree 1`] = `
Array [
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "completeness": "Complete",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testThree",
        "assets": Array [
          "base",
        ],
        "key": "testTwo",
      },
    ],
    "tag": "Computed",
  },
  Object {
    "EphemeraId": "COMPUTED#testThree",
    "completeness": "Complete",
    "connections": Array [],
    "tag": "Computed",
  },
]
`;

exports[`GraphCache getPartial should correctly decipher a partial tree 1`] = `
Array [
  Object {
    "EphemeraId": "VARIABLE#testOne",
    "completeness": "Complete",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testTwo",
        "assets": Array [
          "base",
        ],
      },
      Object {
        "EphemeraId": "COMPUTED#testThree",
        "assets": Array [
          "base",
        ],
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "completeness": "Partial",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testThree",
        "assets": Array [
          "base",
        ],
        "key": "testTwo",
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testThree",
    "completeness": "Partial",
    "connections": Array [],
  },
]
`;

exports[`GraphCache put should backpopulate antidependency links 1`] = `
Array [
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "assets": Array [],
    "completeness": "Partial",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testFour",
        "assets": Array [
          "base",
        ],
        "key": "testFour",
      },
    ],
    "tag": "Computed",
  },
  Object {
    "EphemeraId": "COMPUTED#testFour",
    "completeness": "Partial",
    "connections": Array [],
  },
]
`;

exports[`GraphCache put should correctly add a complete tree 1`] = `
Array [
  Object {
    "EphemeraId": "COMPUTED#testFour",
    "completeness": "Complete",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testTwo",
        "assets": Array [
          "base",
        ],
        "key": "testFour",
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "completeness": "Partial",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testThree",
        "assets": Array [
          "base",
        ],
        "key": "testTwo",
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testThree",
    "completeness": "Partial",
    "connections": Array [],
  },
]
`;

exports[`GraphCache put should correctly add a single graph item 1`] = `
Array [
  Object {
    "EphemeraId": "COMPUTED#testFour",
    "completeness": "Partial",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testTwo",
        "assets": Array [
          "base",
        ],
        "key": "testFour",
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testTwo",
    "completeness": "Partial",
    "connections": Array [
      Object {
        "EphemeraId": "COMPUTED#testThree",
        "assets": Array [
          "base",
        ],
        "key": "testTwo",
      },
    ],
  },
  Object {
    "EphemeraId": "COMPUTED#testThree",
    "completeness": "Partial",
    "connections": Array [],
  },
]
`;
